@@ -6,6 +6,10 @@ Revision history for DBIx::Class
         - Invoking get_inflated_columns() no longer fires get_columns() but
           instead retrieves data from individual non-inflatable columns via
           get_column()
+        - Limited checks are performed on whether columns without declared
+          is_nullable => 1 metadata do in fact sometimes fetch NULLs from
+          the database (the check is currently very limited and is performed
+          only on resultset collapse when the alternative is rather worse)
 
     * Fixes
         - Fix _dbi_attrs_for_bind() being called befor DBI has been loaded
